<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toast_relativelayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#323331" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="3dp"
        android:text="@string/map_alert_textview1"
        android:textColor="@android:color/white" >
    </TextView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:contentDescription="@string/map_title_image_description1"
        android:src="@drawable/ic_mark_location" >
    </ImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:paddingLeft="3dp"
        android:text="@string/map_alert_textview2"
        android:textColor="@android:color/white" >
    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:paddingLeft="3dp"
        android:text="@string/map_alert_textview3"
        android:textColor="@android:color/white" >
    </TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:contentDescription="@string/map_alert_image_description1"
        android:src="@drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:text="@string/map_alert_textview4"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:paddingLeft="3dp"
        android:text="@string/map_alert_textview5"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:paddingLeft="3dp"
        android:text="@string/map_alert_textview6"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:contentDescription="@string/map_title_image_description2"
        android:src="@drawable/ic_menu_forward" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:text="@string/map_alert_textview7"
        android:textColor="@android:color/white" />

</RelativeLayout>