<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="#f0f0f0"
    android:fillViewport="true" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0" >

        <TextView
            android:id="@+id/info_activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/info_activity_description"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_activity_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_activity_description"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/info_activity_description_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_activity_sources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_activity_description_text"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:text="@string/info_activity_sources"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/info_activity_sources_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_activity_sources"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/info_activity_sources_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

</ScrollView>